--- a/project/deposito/deposito-web/pom.xml
+++ b/project/deposito/deposito-web/pom.xml
@@ -63,6 +63,13 @@
          <scope>provided</scope>
       </dependency>
       
+	  <dependency>
+	     <groupId>javax.servlet</groupId>
+	     <artifactId>javax.servlet-api</artifactId>
+	     <version>3.1.0</version>
+	     <scope>provided</scope>
+	  </dependency>	
+		      
       <!-- Import the JSF API, we use provided scope as the API is included in JBoss WildFly -->
       <dependency>
          <groupId>org.jboss.spec.javax.faces</groupId>
