Added missing JMS dependency plus MDB for stock requests

--- a/project/deposito/pom.xml
+++ b/project/deposito/pom.xml
@@ -111,7 +111,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
+            
+            <dependency>
+                <groupId>org.wildfly.bom</groupId>
+                <artifactId>jboss-javaee-7.0-with-logging</artifactId>
+                <version>${version.jboss.bom}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+           
         </dependencies>
     </dependencyManagement>
 
