--- a/project/deposito/deposito-ejb/pom.xml
+++ b/project/deposito/deposito-ejb/pom.xml
@@ -57,7 +57,13 @@
             <artifactId>cdi-api</artifactId>
             <scope>provided</scope>
         </dependency>
-
+        
+        <dependency>
+		    <groupId>org.jboss.spec.javax.jms</groupId>
+		    <artifactId>jboss-jms-api_2.0_spec</artifactId>
+		    <scope>provided</scope>
+		</dependency>
+        
         <!-- Import the JPA API, we use provided scope as the API is included in JBoss WildFly -->
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
