--- a/project/deposito/pom.xml
+++ b/project/deposito/pom.xml
@@ -120,6 +120,16 @@
                 <scope>import</scope>
             </dependency>
            
+           	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+			<dependency>
+			    <groupId>com.google.code.gson</groupId>
+			    <artifactId>gson</artifactId>
+			    <version>2.7</version>
+			    <type>pom</type>
+			    <scope>import</scope>
+			</dependency>
+			           	
+           
         </dependencies>
     </dependencyManagement>
 
