--- a/project/deposito/deposito-ejb/pom.xml
+++ b/project/deposito/deposito-ejb/pom.xml
@@ -102,13 +102,12 @@
             <artifactId>arquillian-protocol-servlet</artifactId>
             <scope>test</scope>               
         </dependency>
-        
+
         <dependency>
         	<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<scope>compile</scope>
+        	<artifactId>gson</artifactId>
+        	<version>2.7</version>
         </dependency>
-
     </dependencies>
 
     <build>
