--- a/project/deposito/deposito-ejb/pom.xml
+++ b/project/deposito/deposito-ejb/pom.xml
@@ -108,6 +108,12 @@
         	<artifactId>gson</artifactId>
         	<version>2.7</version>
         </dependency>
+        <dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-core</artifactId>
+        	<version>2.2.2</version>
+        	<scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
