Dependencia JTA agregada. Test sin persistencia funciona.

--- a/project/deposito/pom.xml
+++ b/project/deposito/pom.xml
@@ -119,6 +119,14 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            
+            <dependency>
+                <groupId>org.wildfly.bom</groupId>
+                <artifactId>jboss-javaee-7.0-with-transactions</artifactId>
+                <version>${version.jboss.bom}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
            
            	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 			<dependency>
