--- a/project/deposito/deposito-web/src/main/webapp/WEB-INF/web.xml
+++ b/project/deposito/deposito-web/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <display-name>deposito-web</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <description></description>
-    <display-name>EntregaArticulos</display-name>
-    <servlet-name>EntregaArticulos</servlet-name>
-    <servlet-class>edu.uade.ida.deposito.controller.EntregaArticulos</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>EntregaArticulos</servlet-name>
-    <url-pattern>/EntregaArticulos</url-pattern>
-  </servlet-mapping>
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+ <display-name>deposito-web</display-name>
+ <servlet>
+  <display-name>EntregaArticulos</display-name>
+  <servlet-name>EntregaArticulos</servlet-name>
+  <servlet-class>edu.uade.ida.deposito.controller.EntregaArticulos</servlet-class>
+ </servlet>
+ <servlet-mapping>
+  <servlet-name>EntregaArticulos</servlet-name>
+  <url-pattern>/EntregaArticulos</url-pattern>
+ </servlet-mapping>
+ <welcome-file-list>
+  <welcome-file>index.html</welcome-file>
+  <welcome-file>index.htm</welcome-file>
+  <welcome-file>index.jsp</welcome-file>
+  <welcome-file>default.html</welcome-file>
+  <welcome-file>default.htm</welcome-file>
+  <welcome-file>default.jsp</welcome-file>
+ </welcome-file-list>
+ <jsp-config>
+  <jsp-property-group>
+   <url-pattern>*.jsp</url-pattern>
+   <el-ignored>false</el-ignored>
+  </jsp-property-group>
+ </jsp-config>
 </web-app>
