--- a/project/deposito/pom.xml
+++ b/project/deposito/pom.xml
@@ -127,6 +127,16 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            
+            <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-jms-client-bom -->
+			<dependency>
+			    <groupId>org.wildfly</groupId>
+			    <artifactId>wildfly-jms-client-bom</artifactId>
+			    <version>${version.jboss.bom}</version>
+			    <type>pom</type>
+			    <scope>import</scope>
+			</dependency>
+            
            
            	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 			<dependency>
