--- a/project/deposito/deposito-ejb/pom.xml
+++ b/project/deposito/deposito-ejb/pom.xml
@@ -51,6 +51,18 @@
             <scope>provided</scope>
         </dependency>
 
+             <dependency>
+			     <groupId>org.wildfly</groupId>
+			     <artifactId>wildfly-ejb-client-bom</artifactId>
+			     <version>10.0.0.Final</version>
+			     <type>pom</type>
+			  </dependency>
+			  <dependency>
+			     <groupId>org.wildfly</groupId>
+			     <artifactId>wildfly-jms-client-bom</artifactId>
+			     <version>10.0.0.Final</version>
+			     <type>pom</type>
+			  </dependency>
         <!-- Import the CDI API, we use provided scope as the API is included in JBoss WildFly -->
         <dependency>
             <groupId>javax.enterprise</groupId>
