--- a/project/deposito/pom.xml
+++ b/project/deposito/pom.xml
@@ -128,16 +128,19 @@
                 <scope>import</scope>
             </dependency>
             
-            <!-- https://mvnrepository.com/artifact/org.wildfly/wildfly-jms-client-bom -->
-			<dependency>
-			    <groupId>org.wildfly</groupId>
-			    <artifactId>wildfly-jms-client-bom</artifactId>
-			    <version>${version.jboss.bom}</version>
-			    <type>pom</type>
-			    <scope>import</scope>
-			</dependency>
-            
-           
+             <dependency>
+			     <groupId>org.wildfly</groupId>
+			     <artifactId>wildfly-ejb-client-bom</artifactId>
+			     <version>10.0.0.Final</version>
+			     <type>pom</type>
+			  </dependency>
+			  <dependency>
+			     <groupId>org.wildfly</groupId>
+			     <artifactId>wildfly-jms-client-bom</artifactId>
+			     <version>10.0.0.Final</version>
+			     <type>pom</type>
+			  </dependency>
+
            	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 			<dependency>
 			    <groupId>com.google.code.gson</groupId>
