--- a/project/deposito/deposito-ejb/pom.xml
+++ b/project/deposito/deposito-ejb/pom.xml
@@ -51,23 +51,17 @@
             <scope>provided</scope>
         </dependency>
 
-             <dependency>
-			     <groupId>org.wildfly</groupId>
-			     <artifactId>wildfly-ejb-client-bom</artifactId>
-			     <version>10.0.0.Final</version>
-			     <type>pom</type>
-			  </dependency>
-			  <dependency>
-			     <groupId>org.wildfly</groupId>
-			     <artifactId>wildfly-jms-client-bom</artifactId>
-			     <version>10.0.0.Final</version>
-			     <type>pom</type>
-			  </dependency>
         <!-- Import the CDI API, we use provided scope as the API is included in JBoss WildFly -->
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+        	<groupId>org.jboss</groupId>
+        	<artifactId>jboss-remote-naming</artifactId>
+        	<scope>provided</scope>
         </dependency>
         
         <dependency>
