--- a/project/deposito/pom.xml
+++ b/project/deposito/pom.xml
@@ -131,14 +131,16 @@
              <dependency>
 			     <groupId>org.wildfly</groupId>
 			     <artifactId>wildfly-ejb-client-bom</artifactId>
-			     <version>10.0.0.Final</version>
+			     <version>${version.jboss.bom}</version>
 			     <type>pom</type>
+			     <scope>import</scope>
 			  </dependency>
 			  <dependency>
 			     <groupId>org.wildfly</groupId>
 			     <artifactId>wildfly-jms-client-bom</artifactId>
-			     <version>10.0.0.Final</version>
+			     <version>${version.jboss.bom}</version>
 			     <type>pom</type>
+			     <scope>import</scope>
 			  </dependency>
 
            	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
