--- a/project/deposito/deposito-web/src/main/webapp/WEB-INF/web.xml
+++ b/project/deposito/deposito-web/src/main/webapp/WEB-INF/web.xml
@@ -7,9 +7,18 @@
   <servlet-name>EntregaArticulos</servlet-name>
   <servlet-class>edu.uade.ida.deposito.controller.EntregaArticulos</servlet-class>
  </servlet>
+ <servlet>
+  <display-name>GenerarEntregaArticulos</display-name>
+  <servlet-name>GenerarEntregaArticulos</servlet-name>
+  <servlet-class>edu.uade.ida.deposito.controller.GenerarEntregaArticulos</servlet-class>
+ </servlet>
  <servlet-mapping>
   <servlet-name>EntregaArticulos</servlet-name>
   <url-pattern>/EntregaArticulos</url-pattern>
+ </servlet-mapping>
+  <servlet-mapping>
+  <servlet-name>GenerarEntregaArticulos</servlet-name>
+  <url-pattern>/GenerarEntregaArticulos</url-pattern>
  </servlet-mapping>
  <welcome-file-list>
   <welcome-file>index.html</welcome-file>
