--- a/project/deposito/deposito-web/src/main/webapp/WEB-INF/web.xml
+++ b/project/deposito/deposito-web/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,7 @@
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
  <display-name>deposito-web</display-name>
+ 
  <servlet>
   <display-name>GenerarEntregaArticulosWizard</display-name>
   <servlet-name>GenerarEntregaArticulosWizard</servlet-name>
@@ -11,6 +12,17 @@
   <servlet-name>GenerarEntregaArticulosWizard</servlet-name>
   <url-pattern>/GenerarEntregaArticulosWizard</url-pattern>
  </servlet-mapping>
+ 
+  <servlet>
+  <display-name>GenerarSolicitudDeCompraWizard</display-name>
+  <servlet-name>GenerarSolicitudDeCompraWizard</servlet-name>
+  <servlet-class>edu.uade.ida.deposito.controller.GenerarSolicitudDeCompraWizard</servlet-class>
+ </servlet>
+  <servlet-mapping>
+  <servlet-name>GenerarSolicitudDeCompraWizard</servlet-name>
+  <url-pattern>/GenerarSolicitudDeCompraWizard</url-pattern>
+ </servlet-mapping>
+ 
  <welcome-file-list>
   <welcome-file>index.html</welcome-file>
   <welcome-file>index.htm</welcome-file>
