--- a/project/deposito/deposito-web/src/main/webapp/WEB-INF/web.xml
+++ b/project/deposito/deposito-web/src/main/webapp/WEB-INF/web.xml
@@ -4,23 +4,23 @@
  <display-name>deposito-web</display-name>
  
  <servlet>
-  <display-name>GenerarEntregaArticulosWizard</display-name>
-  <servlet-name>GenerarEntregaArticulosWizard</servlet-name>
-  <servlet-class>edu.uade.ida.deposito.controller.GenerarEntregaArticulosWizard</servlet-class>
+  <display-name>EntregaArticulosWizard</display-name>
+  <servlet-name>EntregaArticulosWizard</servlet-name>
+  <servlet-class>edu.uade.ida.deposito.controller.EntregaArticulosWizard</servlet-class>
  </servlet>
   <servlet-mapping>
-  <servlet-name>GenerarEntregaArticulosWizard</servlet-name>
-  <url-pattern>/GenerarEntregaArticulosWizard</url-pattern>
+  <servlet-name>EntregaArticulosWizard</servlet-name>
+  <url-pattern>/EntregaArticulosWizard</url-pattern>
  </servlet-mapping>
  
   <servlet>
-  <display-name>GenerarSolicitudCompraWizard</display-name>
-  <servlet-name>GenerarSolicitudCompraWizard</servlet-name>
-  <servlet-class>edu.uade.ida.deposito.controller.GenerarSolicitudCompraWizard</servlet-class>
+  <display-name>SolicitudCompraWizard</display-name>
+  <servlet-name>SolicitudCompraWizard</servlet-name>
+  <servlet-class>edu.uade.ida.deposito.controller.SolicitudCompraWizard</servlet-class>
  </servlet>
   <servlet-mapping>
-  <servlet-name>GenerarSolicitudCompraWizard</servlet-name>
-  <url-pattern>/GenerarSolicitudCompraWizard</url-pattern>
+  <servlet-name>SolicitudCompraWizard</servlet-name>
+  <url-pattern>/SolicitudCompraWizard</url-pattern>
  </servlet-mapping>
  
  <welcome-file-list>
