--- a/project/deposito/deposito-ejb/pom.xml
+++ b/project/deposito/deposito-ejb/pom.xml
@@ -64,6 +64,16 @@
         </dependency>
         
         <dependency>
+        	<groupId>org.jboss.xnio</groupId>
+        	<artifactId>xnio-api</artifactId>
+        </dependency>
+        
+        <dependency>
+        	<groupId>org.jboss.xnio</groupId>
+        	<artifactId>xnio-nio</artifactId>
+        </dependency>
+        
+        <dependency>
 		    <groupId>org.jboss.spec.javax.jms</groupId>
 		    <artifactId>jboss-jms-api_2.0_spec</artifactId>
 		    <scope>provided</scope>
