--- a/project/deposito/pom.xml
+++ b/project/deposito/pom.xml
@@ -138,7 +138,7 @@
 			  <dependency>
 			     <groupId>org.wildfly</groupId>
 			     <artifactId>wildfly-jms-client-bom</artifactId>
-			     <version>${version.jboss.bom}</version>
+			     <version>10.1.0.Final</version>
 			     <type>pom</type>
 			     <scope>import</scope>
 			  </dependency>
