--- a/project/deposito/deposito-ejb/pom.xml
+++ b/project/deposito/deposito-ejb/pom.xml
@@ -94,6 +94,11 @@
         </dependency>
         
         <dependency>
+        	<groupId>commons-beanutils</groupId>
+        	<artifactId>commons-beanutils</artifactId>
+        </dependency>
+        
+        <dependency>
 		    <groupId>org.jboss.spec.javax.jms</groupId>
 		    <artifactId>jboss-jms-api_2.0_spec</artifactId>
 		    <scope>provided</scope>
