--- a/project/deposito/deposito-ejb/pom.xml
+++ b/project/deposito/deposito-ejb/pom.xml
@@ -105,6 +105,16 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.jboss.remoting</groupId>
+			<artifactId>jboss-remoting</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+		</dependency>
+		
+		<dependency>
 		    <groupId>org.jboss.spec.javax.transaction</groupId>
 		    <artifactId>jboss-transaction-api_1.2_spec</artifactId>
 		    <scope>provided</scope>
